# gosibang

./: .env.example  .gitignore  .vercelignore  form1.html  index.html  package-lock.json  package.json  vite.config.ts
.claude/hooks/moai/: post_tool__linter.py
.moai/project/: product.md  structure.md  tech.md
.moai/specs/SPEC-MED-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-MED-002/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-MED-003/: acceptance.md  plan.md  spec.md
public/: prescription_categories.json  prescription_definitions.json
src/: App.tsx  WebApp.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  commands.rs  db.rs  encryption.rs  error.rs  lib.rs  models.rs  notification.rs  server.rs  sync.rs  web_api.rs
src-tauri/static/: .gitkeep
src/components/: AnnouncementBanner.tsx  InitialChartView.tsx  Layout.tsx  PrescriptionInput.tsx  ProgressNoteView.tsx  RichContentDisplay.tsx  RichTextEditor.tsx  Sidebar.tsx  StaffAccountsTab.tsx  WebLayout.tsx
src/components/medication/: MedicationAlertBadge.tsx  MedicationDashboardWidget.tsx  MedicationLogItem.tsx  MedicationLogList.tsx  MedicationScheduleForm.tsx  MedicationScheduleList.tsx  MedicationStats.tsx  MedicationStatusBadge.tsx  MedicationTimeSlot.tsx  TimePickerGrid.tsx  index.ts
src/components/notification/: index.ts  (+10 more)
src/hooks/: useAutoBackup.ts  useDpiScaling.ts  usePlanLimits.ts  useSurveyRealtime.ts  useZoom.ts
src/lib/: backup.ts  browserNotification.ts  contentUtils.ts  imageStorage.ts  localDb.ts  menuConfig.ts  notificationSound.ts  platform.ts  prescriptionData.ts  prescriptionPrint.ts  supabase.ts  surveyData.ts  surveyUtils.ts  tauri.ts  tiptapFontSize.ts  webApi.ts  webApiClient.ts
src/pages/: Charts.tsx  Dashboard.tsx  Homework.tsx  HomeworkAdmin.tsx  Inventory.tsx  KioskSurvey.tsx  Login.tsx  Medications.tsx  PatientSurvey.tsx  Patients.tsx  PrescriptionDefinitions.tsx  Prescriptions.tsx  Questions.tsx  Settings.tsx  SubscriptionAdmin.tsx  SurveyResponses.tsx  SurveyTemplates.tsx  WebCharts.tsx  WebDashboard.tsx  WebLogin.tsx  WebMedications.tsx  WebPatients.tsx  WebSurveys.tsx
src/store/: authStore.ts  clinicStore.ts  featureStore.ts  homeworkStore.ts  medicationStore.ts  notificationStore.ts  patientStore.ts  questionStore.ts  surveyStore.ts  webAuthStore.ts
src/types/: index.ts
(+3 files in other folders)
