[package]
name = "gosibang"
version = "0.1.0"
description = "고시방 - 한약처방관리시스템"
authors = ["Gosibang"]
license = "Proprietary"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (SQLite with SQLCipher encryption)
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }

# Async runtime & HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
log = "0.4"
once_cell = "1.20"
dirs = "5.0"

# Security
argon2 = "0.5"
rand = "0.8"
bcrypt = "0.15"

# HTTP Server (axum)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# QR Code
qrcode = "0.14"
image = "0.25"
base64 = "0.22"

# Embed static files
rust-embed = "8.5"
mime_guess = "2.0"
